--- a/agentic-control-demo.html
+++ b/agentic-control-demo.html
@@ -2250,35 +2250,53 @@ ASSISTANT:
         {
           id:'step1',
           title:'Step 1 • Discharge Readiness & Risk',
-          body:`<p><strong>LACE+:</strong> ${p.lace} (${p.laceRisk}) &nbsp; <strong>HOSPITAL:</strong> ${p.hosp} (${p.hospRisk})</p>
-                <p><strong>Overall risk:</strong> <span class="${riskCls}">${riskLabel}</span></p>
-                <p><strong>Flags:</strong> ${p.atsi ? 'ATSI; ' : ''}${p.ndis ? 'NDIS participant; ' : ''}${(!p.atsi && !p.ndis) ? 'None recorded.' : ''}</p>
-                <div class="row" style="justify-content:flex-end; margin-top:6px;"><button class="btn" onclick="runHdStep('step1')">Run Step 1 Agent</button></div>`
+          body:
+            '<p><strong>LACE+:</strong> ' + p.lace + ' (' + p.laceRisk + ') &nbsp; ' +
+            '<strong>HOSPITAL:</strong> ' + p.hosp + ' (' + p.hospRisk + ')</p>' +
+            '<p><strong>Overall risk:</strong> <span class="' + riskCls + '">' + riskLabel + '</span></p>' +
+            '<p><strong>Flags:</strong> ' +
+              (p.atsi ? 'ATSI; ' : '') +
+              (p.ndis ? 'NDIS participant; ' : '') +
+              (!p.atsi && !p.ndis ? 'None recorded.' : '') +
+            '</p>' +
+            '<div class="row" style="justify-content:flex-end; margin-top:6px;"><button class="btn" onclick="runHdStep(\'step1\')">Run Step 1 Agent</button></div>'
         },
         {
           id:'step2',
           title:'Step 2 • Med Reconciliation',
-          body:`<p>Status: <span class="${step2StatusClass}">${step2StatusLabel}</span></p><p>Discrepancies: 1–2 typical per patient. Open generated PDF pack from the Medication Reconciliation Agent in the real console.</p><div class="row" style="justify-content:flex-end; margin-top:6px;"><button class="btn" onclick="runHdStep('step2')">Run Step 2 Agent</button></div>`
+          body:
+            '<p>Status: <span class="' + step2StatusClass + '">' + step2StatusLabel + '</span></p>' +
+            '<p>Discrepancies: 1–2 typical per patient. Open generated PDF pack from the Medication Reconciliation Agent in the real console.</p>' +
+            '<div class="row" style="justify-content:flex-end; margin-top:6px;"><button class="btn" onclick="runHdStep(\'step2\')">Run Step 2 Agent</button></div>'
         },
         {
           id:'step3',
           title:'Step 3 • Follow-Up',
-          body:'<p>GP and specialist appointments scheduled.</p><p>Click-through in the real console would show booked dates, completion and no-show flags.</p><div class="row" style="justify-content:flex-end; margin-top:6px;"><button class="btn" onclick="runHdStep(\'step3\')">Run Step 3 Agent</button></div>`
+          body:
+            '<p>GP and specialist appointments scheduled.</p>' +
+            '<p>Click-through in the real console would show booked dates, completion and no-show flags.</p>' +
+            '<div class="row" style="justify-content:flex-end; margin-top:6px;"><button class="btn" onclick="runHdStep(\'step3\')">Run Step 3 Agent</button></div>'
         },
         {
           id:'step4',
           title:'Step 4 • GP & Community Handoff',
-          body:'<p>GP summary sent. Community referrals depend on risk bundle (HIGH risk → full services; LOW risk → slimmed set).</p><div class="row" style="justify-content:flex-end; margin-top:6px;"><button class="btn" onclick="runHdStep(\'step4\')">Run Step 4 Agent</button></div>`
+          body:
+            '<p>GP summary sent. Community referrals depend on risk bundle (HIGH risk → full services; LOW risk → slimmed set).</p>' +
+            '<div class="row" style="justify-content:flex-end; margin-top:6px;"><button class="btn" onclick="runHdStep(\'step4\')">Run Step 4 Agent</button></div>'
         },
         {
           id:'step5',
           title:'Step 5 • Monitoring',
-          body:`<p>Day 1–30 avatar check-ins configured. High-risk patients like ${p.name} would receive tighter monitoring.</p><div class="row" style="justify-content:flex-end; margin-top:6px;"><button class="btn" onclick="runHdStep('step5')">Run Step 5 Agent</button></div>`
+          body:
+            '<p>Day 1–30 avatar check-ins configured. High-risk patients like ' + p.name + ' would receive tighter monitoring.</p>' +
+            '<div class="row" style="justify-content:flex-end; margin-top:6px;"><button class="btn" onclick="runHdStep(\'step5\')">Run Step 5 Agent</button></div>'
         },
         {
           id:'step6',
           title:'Step 6 • Outcomes',
-          body:'<p>This admission will contribute to readmission, adherence and follow-up KPIs aggregated by the Outcomes Agent.</p><div class="row" style="justify-content:flex-end; margin-top:6px;"><button class="btn" onclick="runHdStep(\'step6\')">Run Step 6 Agent</button></div>`
+          body:
+            '<p>This admission will contribute to readmission, adherence and follow-up KPIs aggregated by the Outcomes Agent.</p>' +
+            '<div class="row" style="justify-content:flex-end; margin-top:6px;"><button class="btn" onclick="runHdStep(\'step6\')">Run Step 6 Agent</button></div>'
         }
       ];
 
